--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+#btn {
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.5s ease-in-out, border-radius 0.5s ease-in-out;
+}
+
+#btn:hover {
+  background-color: yellow;
+  color: black;
+  border-radius: 30px;
+}
